test/errors/type_names_error/zs/clashing_identifiers_within_package_error.zs
package clashing_identifiers_within_package_error;

struct Test
{
    uint8 field;
};

const uint8 teST = 10;
